border gap issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,14 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: center; 
-  border: 0.25vh solid #000000;
+  outline: 0.35vh solid #000000;
   width: 75%;
   height: 75%;
   overflow: hidden;
 }
 
 .color{
-  height: 100%;
+  height: 75vh;
   border: none;
 }
 
@@ -49,9 +49,11 @@ button:hover{
 }
 
 .controlButton{
+  font-size: 2vh;
   background: #3459F9;
   color: #FFFFFF;
   border-radius: 0.5vh;
   border: none;
-  height: 4vh;
+  height: 5vh;
+  width: 15vh;
 }
